UG/client.h

typedef struct _syndicate_handle {
   int type;
   off_t offset;
   union {
      struct fs_file_handle* fh;
      struct fs_dir_handle* fdh;
   };
} syndicate_handle_t;
// NULL-terminated directory listing
typedef fs_dir_entry** syndicate_dir_listing_t;
int syndicate_getattr(struct syndicate_state* state, const char *path, struct stat *statbuf);
int syndicate_mkdir(struct syndicate_state* state, const char *path, mode_t mode);
int syndicate_unlink(struct syndicate_state* state, const char *path);
int syndicate_rmdir(struct syndicate_state* state, const char *path);
syndicate_handle_t* syndicate_create(struct syndicate_state* state, const char *path, mode_t mode, int* rc );
syndicate_handle_t* syndicate_open(struct syndicate_state* state, const char *path, int flags, int* rc);
int syndicate_read(struct syndicate_state* state, char *buf, size_t size, syndicate_handle_t* fi);
int syndicate_write(struct syndicate_state* state, const char *buf, size_t size, syndicate_handle_t *fi);
off_t syndicate_seek(syndicate_handle_t* fi, off_t pos, int whence);
int syndicate_flush(struct syndicate_state* state, syndicate_handle_t *fi);
int syndicate_close(struct syndicate_state* state, syndicate_handle_t *fi);
int syndicate_fsync(struct syndicate_state* state, int datasync, syndicate_handle_t *fi);
syndicate_handle_t* syndicate_opendir(struct syndicate_state* state, const char *path, int* rc);
int syndicate_readdir(struct syndicate_state* state, syndicate_dir_listing_t* listing, syndicate_handle_t *fi);
int syndicate_closedir(struct syndicate_state* state, syndicate_handle_t *fi);
void syndicate_free_dir_listing( syndicate_dir_listing_t listing );
int syndicate_client_init( struct syndicate_state* state,
                           char const* config_file,
                           char const* ms_url,
                           char const* volume_name,
                           char const* gateway_name,
                           int gateway_port,                    // FIXME: remove this
                           char const* md_username,
                           char const* md_password,
                           char const* volume_pubkey_file,
                           char const* my_key_file,
                           char const* storage_root
                         );
int syndicate_client_shutdown( struct syndicate_state* state, int wait_replicas );