old/UG/fs/fs_entry.h

#define FTYPE_FILE 1
#define FTYPE_DIR  2
typedef vector<fs_dirent> fs_entry_set;
typedef map<uint64_t, struct fs_entry_block_info> modification_map;
typedef map<string, string> xattr_cache_t;
struct syndicate_state;
struct replica_snapshot;
struct sync_context;
typedef list<struct sync_context*> sync_context_list_t;     // queue of sync contexts
// Syndicate filesystem entry
struct fs_entry {
   char ftype;                // what type of file this is
   char* name;                // name of this file
   uint64_t file_id;          // Volume-wide unique ID for this file
   int64_t version;           // version of this file
   file_manifest* manifest;   // current file manifest

   uint64_t owner;               // User ID of the user that created this file.
   uint64_t coordinator;         // Gateway ID of the gateway that will coordinate writes on this file
   uint64_t volume;              // volume ID on which this file resides
   mode_t mode;               // access permissions
   off_t size;                // how big is this file's content?
   int link_count;            // how many other fs_entry structures refer to this file
   int open_count;            // how many file descriptors refer to this file
   int64_t generation;        // the generation number of this file (n, as in, the nth creat() in the parent directory)
   
   int64_t mtime_sec;         // modification time (seconds)
   int32_t mtime_nsec;        // modification time (nanoseconds)
   int64_t ctime_sec;         // creation time (seconds)
   int32_t ctime_nsec;        // creation time (nanoseconds)
   int64_t atime;             // access time (seconds)
   int64_t write_nonce;       // nonce generated at last write by the MS
   int64_t xattr_nonce;       // nonce generated on setxattr/removexattr by the MS
   int64_t ms_manifest_mtime_sec;       // latest-known manifest modification time from the MS
   int32_t ms_manifest_mtime_nsec;      // latest-known manifest modification time from the MS
   
   modification_map* bufferred_blocks;  // set of in-core blocks that have been either read recently, or modified recently.  Modified blocks will be flushed to on-disk cache.
   modification_map* dirty_blocks;      // set of disk-cached blocks that have been modified locally, and will need to be replicated on flush() or last close()
   modification_map* garbage_blocks;    // set of blocks as they were when the file was opened for the first time since the last synchronization (i.e. when open_count was last 0)
   
   struct timespec refresh_time;    // time of last refresh from the ms
   uint32_t max_read_freshness;     // how long since last refresh, in ms, this fs_entry is to be considered fresh for reading
   uint32_t max_write_freshness;    // how long since last refresh, in ms, this fs_entry is to be considered fresh for writing
   bool read_stale;
   bool write_stale;
   bool dirty;                      // if true, then we need to flush data on fsync()
   
   replica_snapshot* old_snapshot;      // snapshot of this fs_entry before dirtying it

   pthread_rwlock_t lock;     // lock to control access to this structure
   
   sync_context_list_t* sync_queue;     // queue of synchronization requests (from truncate() and fsync()), used to ensure that we send metadata to the MS in program order
   
   fs_entry_set* children;      // used only for directories--set of children
   int64_t ms_num_children;     // the number of children the MS says this entry has
   int64_t ms_capacity;            // maximum index number of a child in the MS
   
   pthread_rwlock_t xattr_lock;
   xattr_cache_t* xattr_cache;  // cached xattrs
   
   bool created_in_session;     // if we're in client mode, then this is true of the file was created in this session
   bool deletion_in_progress;   // if true, we're in the process of deleting a file (which is not atomic)
   
   bool vacuuming;              // if true, then we're currently vacuuming this file
   bool vacuumed;               // if true, then we've already tried to vacuum this file upon discovery (false means we should try again)
};
// Syndicate directory entry
struct fs_dir_entry {
   char ftype;
   struct md_entry data;
};
// Syndicate core information
struct fs_core {
   struct fs_entry* root;              // root FS entry
   struct md_syndicate_conf* conf;     // Syndicate configuration structure
   struct ms_client* ms;               // link to the MS
   struct md_closure* closure;         // UG storage closure
   struct md_syndicate_cache* cache;   // index over on-disk cache
   struct syndicate_state* state;   // state 
   struct fs_entry_view_change_cls* viewchange_cls;     // pass to view change callback
   
   uint64_t volume;                 // Volume we're bound to
   uint64_t gateway;                // gateway ID
   uint64_t blocking_factor;        // block size

   pthread_rwlock_t lock;     // lock to control access to this structure
   pthread_rwlock_t fs_lock;  // lock to create/remove entries in the filesystem
};
struct fs_entry* fs_entry_resolve_path_cls( struct fs_core* core, char const* path, uint64_t user, uint64_t vol, bool writelock, int* err, int (*ent_eval)( struct fs_entry*, void* ), void* cls );
int fs_entry_sync_queue_apply( struct fs_entry* fent, void (*func)( struct sync_context*, void* ), void* cls );
// cython compatibility
uint64_t fs_dir_entry_type( struct fs_dir_entry* dirent );
char* fs_dir_entry_name( struct fs_dir_entry* dirent );
uint64_t fs_dir_entry_file_id( struct fs_dir_entry* dirent );
int64_t fs_dir_entry_mtime_sec( struct fs_dir_entry* dirent );
int32_t fs_dir_entry_mtime_nsec( struct fs_dir_entry* dirent );
int64_t fs_dir_entry_ctime_sec( struct fs_dir_entry* dirent );
int32_t fs_dir_entry_ctime_nsec( struct fs_dir_entry* dirent );
int64_t fs_dir_entry_write_nonce( struct fs_dir_entry* dirent );
int64_t fs_dir_entry_version( struct fs_dir_entry* dirent );
int32_t fs_dir_entry_max_read_freshness( struct fs_dir_entry* dirent );
int32_t fs_dir_entry_max_write_freshness( struct fs_dir_entry* dirent );
uint64_t fs_dir_entry_owner( struct fs_dir_entry* dirent );
uint64_t fs_dir_entry_coordinator( struct fs_dir_entry* dirent );
uint64_t fs_dir_entry_volume( struct fs_dir_entry* dirent );
int32_t fs_dir_entry_mode( struct fs_dir_entry* dirent );
uint64_t fs_dir_entry_size( struct fs_dir_entry* dirent );